--- a/master/بازاریابی دیجیتال.md
+++ b/master/بازاریابی دیجیتال.md
@@ -2,7 +2,7 @@
 - [بازاریابی دیجیتال](#menu)
 - [تبلیغات رسانه‌ای](#menu)
 - [جذب کاربر](#menu)
-- [روش درخواس](#menu)
+- [روش درخواست](#menu)
 ## مقدمه
 
 خدمات حوزه بازاریابی دیجیتال به منظور گسترش مخاطبان و آگاهی برند، جایگاه ویژه‌ای میان سرویس‌دهندگان و صاحبان کسب‌وکارها خصوصا کسب‌وکارهای دیجیتال مشتری‌محور (B2C) دارد. شرکت فناپ‌پلاس، آمادگی ارائه این خدمات را به کسب‌وکارهای نوپا و کوچک دارد. این خدمات در حوزه‌های زیر قابل ارائه است.
@@ -46,10 +46,11 @@
 شبکه‌های اجتماعی بزرگ‌ترین بستر تعاملی بین افراد در دنیای مدرن  هستند که روز به روز جامعه آماری بیشتری را تحت پوشش قرار می‌دهند. حضور فعال در این بستر گسترده یک راه‌کار تاثیرگذار در موفقیت برنامه‌های تبلیغاتی کسب‌وکار است و بررسی و شناسایی افراد علاقه‌مند به حوزه کسب‌وکاری و جذب و نگهداری آنان از اقدامات کلیدی در این فرآیند محسوب می‌شود. جذب فالور، افزایش تعداد لایک و کامنت، برگزاری مسابقات و کمپین‌های پروموشن جهت جذب فالور از دسته فعالیت‌های قابل انجام در این شبکه‌ها خواهد بود.
 
 ## روش درخواست
-```mermaid
-graph LR
-A(خرید طرح انتخابی) --> B(تماس کارشناسان ما با شما برای تکمیل فرم)
-B --> C(شروغ فرایند آزمایشی برای تعیین قیمت)
-C -- توافق --> D(اجرای فرایند به میزان خریداری شده)
-C -- عدم توافق --> E(برگشت هزینه طرح به جز هزینه آزمایش)
-```
+مراحل درخواست سرویس و تکمیل آن به این صورت است
+- خرید طرح انتخابی با توجه به نیاز
+- تماس کارشناسان ما با شما برای تکمیل فرم و درخواست
+	> برای اطلاع از موارد درخواستی، می‌توانید فرم زیر را دانلود کنید
+- شروع فرایند آزمایشی برای تعیین قیمت نهایی
+- اجرای فرایند به میزان پرداخت‌شده بر اساس مبلغ پرداختی
+	> در صورت عدم توافق روی قیمت نهایی هزینه طرح به جز بخش آزمایشی، به کیف پول شما در پاد برگردانده می‌شود.
+
