--- a/master/بن تخفیف.md
+++ b/master/بن تخفیف.md
@@ -12,10 +12,14 @@
 
 ** تمام امکانات بن تخفیف در پکیج billing قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
+در این مستند نحوه استفاده از زیرساخت تخفیفی پاد توضیح داده خواهد شد.
+**بن تخفیف:** کدی است که با اعمال آن به فاکتور، مبلغ یا درصدی از فاکتور کسر می‌شود.
+**شارژ اعتبار:** کدی است که با اعمال آن، کیف پول کاربر شارژ می‌شود.
+
 <div class="box-end">
 </div>
 
-## بن شارژ اعتبار
+## شارژ اعتبار
 
 جهت تعریف شارژ اعتبار، سرویس زیر را فراخوانی نمایید:
 
@@ -23,7 +27,7 @@
 توجه داشته باشید به ازای هر بن تخفیف، باید مقادیر تعداد، مبلغ، نام و توضیحات در پارامترهای جداگانه ارسال گردند.
 
 <br/>
-جهت تعریف شارژ، لازم است در صنف خود حتما اعتبار داشته باشید، هم‌چنین می‌توانید کد هش را به صورت دلخواه تعریف نمایید.
+جهت تعریف شارژ اعتبار، لازم است در صنف خود حتما اعتبار داشته باشید، هم‌چنین می‌توانید کد هش را به صورت دلخواه تعریف نمایید.
 
 <div class="tab-start">
 </div>
@@ -208,9 +212,6 @@ let defineCreditVoucherData = {
 
 <div class="box-end">
 </div>
-
-
-
 
 ## بن تخفیف مبلغی
 
@@ -424,7 +425,7 @@ let defineDiscountAmountVoucherData = {
 
 ## بن تخفیف درصدی
 
-جهت تعریف شارژ بن تخفیف، در قالب درصد سرویس ذیل را فراخوانی نمایید:
+جهت تعریف بن تخفیف، در قالب درصد سرویس ذیل را فراخوانی نمایید:
 
 <br/>
 توجه داشته باشید به ازای هر بن تخفیف، باید مقادیر تعداد، درصد، نام و توضیحات در پارامترهای جداگانه ارسال گردند.
@@ -696,9 +697,9 @@ let defineDiscountPercentageVoucherData = {
 </div>
 
 
-## اعمال ووچر به فاکتور
+## اعمال بن تخفیف به فاکتور
 
-بعد از تعزیف ووچر، برای اعمال ووچر به فاکتور(درصورتی که پارامتر postVoucherEnabled در صدور فاکتور را با مقدار true ارسال نموده باشید)، سرویس ذیل را فراخوانی نمایید:
+بعد از تعریف بن تخفیف برای اعمال بن تخفیف به فاکتور(درصورتی که پارامتر postVoucherEnabled در صدور فاکتور را با مقدار true ارسال نموده باشید)، سرویس زیر را فراخوانی نمایید:
 
 <br/>
 
@@ -854,9 +855,9 @@ let applyVoucherData = {
 </div>
 
 
-## دریافت و جستجو لیست بن‌ ها
+## لیست و جستجو بن‌تخفیف‌ها
 
-با سرویس زیر امکان خواهید داشت در بین لیست‌های بن کسب و کارتان جستجو و آن را دریافت نمایید:
+با سرویس زیر امکان خواهید داشت در بین بن تخفیف‌های تعریف شده جستجو و آن را دریافت نمایید:
 
 <br/>
 
@@ -1059,7 +1060,7 @@ $param =
 
 ## فعال و غیرفعال سازی بن تخفیف
 
-سرویس ذیل را جهت غیرفعال کردن بن تخفیف زودتر از موعد فراخوانی نمایید:
+سرویس زیر را جهت غیرفعال کردن بن تخفیف زودتر از موعد فراخوانی نمایید:
 
 <div class="tab-start">
 </div>
