--- a/master/بن تخفیف.md
+++ b/master/بن تخفیف.md
@@ -1,10 +1,10 @@
 - [مقدمه](#menu)
-- [بن شارژ اعتبار](#menu)
+- [شارژ اعتبار](#menu)
 - [بن تخفیف مبلغی](#menu)
 - [بن تخفیف درصدی](#menu)
-- [اعمال ووچر به فاکتور](#menu)
-- [دریافت و جستجو لیست بن‌ ها](#menu)
-- [فعال و غیرفعال سازی بن تخفیف](#menu)
+- [اعمال بن تخفیف به فاکتور](#menu)
+- [لیست و جستجو بن‌ ها](#menu)
+- [فعال و غیرفعال‌سازی بن تخفیف](#menu)
 - [لینک‌های مرتبط](#menu)
 
 
@@ -24,7 +24,7 @@
 جهت تعریف شارژ اعتبار، سرویس زیر را فراخوانی نمایید:
 
 <br/>
-توجه داشته باشید به ازای هر بن تخفیف، باید مقادیر تعداد، مبلغ، نام و توضیحات در پارامترهای جداگانه ارسال گردند.
+توجه داشته باشید به ازای هر شارژ اعتبار، باید مقادیر تعداد، مبلغ، نام و توضیحات در پارامترهای جداگانه ارسال گردند.
 
 <br/>
 جهت تعریف شارژ اعتبار، لازم است در صنف خود حتما اعتبار داشته باشید، هم‌چنین می‌توانید کد هش را به صورت دلخواه تعریف نمایید.
