--- a/master/بن تخفیف.md
+++ b/master/بن تخفیف.md
@@ -215,7 +215,7 @@ let defineCreditVoucherData = {
 
 ## بن تخفیف مبلغی
 
-برای ساخت بن تخفیف با مبلغ مشخص، سرویس زیر را فراخوانی نمایید؛می‌توانید با یک بار فراخوانی سرویس، برای چند کاربر اعتبار تعریف نمایید، اما توجه داشته باشید به ازای هر کاربر، کد هش متفاوتی دریافت خواهید کرد و مشتری با اعمال کد هش می‌تواند از شارژ تعریف شده استفاده نماید.
+برای ساخت بن تخفیف با مبلغ مشخص، سرویس زیر را فراخوانی نمایید؛می‌توانید با یک بار فراخوانی سرویس، برای چند کاربر بن تخفیف تعریف نمایید، اما توجه داشته باشید به ازای هر کاربر، کد هش متفاوتی دریافت خواهید کرد و مشتری با اعمال کد هش می‌تواند از بن تخفیف تعریف شده استفاده نماید.
 
 <br/>
 
