--- a/master/بازاریابی دیجیتال.md
+++ b/master/بازاریابی دیجیتال.md
@@ -50,7 +50,7 @@
 مراحل درخواست سرویس و تکمیل آن به این صورت است
 - خرید طرح انتخابی با توجه به نیاز
 - تماس کارشناسان ما با شما برای تکمیل فرم و درخواست
-	> برای اطلاع از موارد درخواستی، می‌توانید فرم زیر را دانلود کنید
+	> برای اطلاع از موارد درخواستی، می‌توانید این [فرم](https://raw.githubusercontent.com/podiumir/docs/master/master/digital-marketing.jpg) را دانلود کنید
 - شروع فرایند آزمایشی برای تعیین قیمت نهایی
 - اجرای فرایند به میزان پرداخت‌شده بر اساس مبلغ پرداختی
 	> در صورت عدم توافق روی قیمت نهایی هزینه طرح به جز بخش آزمایشی، به کیف پول شما در پاد برگردانده می‌شود.
