Update عملیات حساب مجازی.md

--- a/master/عملیات حساب مجازی.md
+++ b/master/عملیات حساب مجازی.md
@@ -453,7 +453,7 @@ podVA.verifyCreditInvoice(verifyCreditInvoiceData)
 
 ## انتقال بین حساب صنفی و کیف پول
 
-### انتقال وجه میان حساب سنفی کسب و کار و کیف پول همان کسب و کار
+### انتقال وجه میان حساب صنفی کسب و کار و کیف پول همان کسب و کار
 
 کسب و کار باید سرویس transferFromOwnAccounts را برای این منظور صدا بزند. دقت نمایید که مبالغی که منتقل می شوند باید تراز باشند، یعنی جمع مقادیر صفر شود. در شبه کد زیر، اعتبار از حساب صنفی به حساب کیف پول کسب و کار منتقل می گردد.
 
