fix bugs on markdowns

--- a/master/ابزار.md
+++ b/master/ابزار.md
@@ -6,7 +6,7 @@
 
 ## مقدمه
 
-** تمام امکانات پرداخت و دریافت قیوض در پکیج tools قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
+** تمام امکانات پرداخت و دریافت قبوض در پکیج tools قرار دارد.برای اطلاعات بیشتر به [پکیج سرویس‌ها](/documents/packages/) مراجعه کنید**
 
 
 <div class="box-end">
