--- a/master/بن تخفیف.md
+++ b/master/بن تخفیف.md
@@ -443,11 +443,11 @@ let defineDiscountAmountVoucherData = {
 
 <br/>
 
-### Type 4 : یکبار مصرف برای یک ایتم
+### Type 4 : یکبار مصرف برای یک آیتم
 
 <br/>
 
-| ProductId | limitedConsumerId | با فرض اینکه فاکتور در صنف منطبق با بن صادر شدخ باشد و زمان انقضای بن نگذشته باشد                                                                      |
+| ProductId | limitedConsumerId | با فرض اینکه فاکتور در صنف منطبق با بن صادر شده باشد و زمان انقضای بن نگذشته باشد                                                                      |
 | --------- | ----------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------ |
 | خیر       | خیر               | بن تخفیف فقط برای یک عدد از یک بند فاکتور و فقط یکبار قابل اعمال                                                                                       |
 | بله       | خیر               | بن تخفیف فقط برای یک عدد از یک بند از فاکتور در صورتی که برابر با یکی از محصولات مجاز باشد قابل اعمال است                                              |
@@ -462,7 +462,7 @@ let defineDiscountAmountVoucherData = {
 
 <br/>
 
-| ProductId | limitedConsumerId | با فرض اینکه فاکتور در صنف منطبق با بن صادر شدخ باشد و زمان انقضای بن نگذشته باشد                              |
+| ProductId | limitedConsumerId | با فرض اینکه فاکتور در صنف منطبق با بن صادر شده باشد و زمان انقضای بن نگذشته باشد                              |
 | --------- | ----------------- | -------------------------------------------------------------------------------------------------------------- |
 | خیر       | خیر               | بن تخفیف بدون محدودیت به دفعات نامحدود قابل استفاده است                                                        |
 | بله       | خیر               | بن فقط برای محصولات مجاز به دفعات قابل استفاده است                                                             |
@@ -478,7 +478,7 @@ let defineDiscountAmountVoucherData = {
 
 <br/>
 
-| ProductId | limitedConsumerId | با فرض اینکه فاکتور در صنف منطبق با بن صادر شدخ باشد و زمان انقضای بن نگذشته باشد |
+| ProductId | limitedConsumerId | با فرض اینکه فاکتور در صنف منطبق با بن صادر شده باشد و زمان انقضای بن نگذشته باشد |
 | --------- | ----------------- | --------------------------------------------------------------------------------- |
 | خیر       | خیر               | بن تخفیف برای کل محصولات یک فاکتور و کل مصرف کنندگان قابل اعمال است               |
 | بله       | خیر               | بن تخفیف فقط برای محصولات مجاز شده  فاکتور قابل اعمال است                         |
