--- a/master/تسویه.md
+++ b/master/تسویه.md
@@ -340,7 +340,7 @@ podBilling.requestGuildSettlement(requestGuildSettlementData)
 
 ## انتقال وجه از حساب مجازی
 
-کسب و کار می تواند با استفاده از سرویس زیر مبلغ مورد نظر خود را از حساب مجازی به یک شماره کارت یا یک شماره شبا بانکی منتقل نماید. بدیهی است که در صورت استفاده از ابزار کارت به کار، کارمزد بانکی از حساب کسب و کار کسر خواهد شد و در صورت استفاده از ابزار پایا، انتقال وجه در زمان مصوب بانک مرکزی انجام خواهد شد.
+کسب و کار می تواند با استفاده از سرویس زیر مبلغ مورد نظر خود را از حساب مجازی به یک شماره کارت یا یک شماره شبا بانکی منتقل نماید. بدیهی است که در صورت استفاده از ابزار کارت به کارت، کارمزد بانکی از حساب کسب و کار کسر خواهد شد و در صورت استفاده از ابزار پایا، انتقال وجه در زمان مصوب بانک مرکزی انجام خواهد شد.
 
 <br/>
 برای پارامتر toolCode از یکی از مقادیر زیر استفاده نمایید:
