--- a/master/کارگزاری.md
+++ b/master/کارگزاری.md
@@ -1470,8 +1470,7 @@ podDealingService.updateBusiness(updateBusinessData)
 
 ### دریافت توکن کسب و کار ایجاد شده
 
-هنگامی که با استفاده از توکن خود کسب و کارهایی را ثبت نمایید، به ازای هر کسب و کار یک apiToken برگردانده می شود که از آن جهت مدیریت امور کسب و کار زیر مجموعه میتوانید استفاده نمایید. در سایر مواقع که لیست کسب و کارهای ثبت شده را دریافت می نمایید این مقدار در لیست برگردانده نمی شود. در صورت نیاز به apiToken کسب و کار ایجاد شده میتوانید توسط سرویس زیر فقط برای یک کسب و کار به شرط اینکه قبلا خودتان آن را ایجاد کرده باشید، توکن کسب و کاری دریافت نمایید.هنگامی که با استفاده از توکن خود کسب و کارهایی را ثبت نمایید، به ازای هر کسب و کار یک apiToken برگردانده می شود که از آن جهت مدیریت امور کسب و کار زیر مجموعه میتوانید استفاده نمایید. در سایر مواقع که لیست کسب و کارهای ثبت شده را دریافت می نمایید این مقدار در لیست برگردانده نمی شود. در صورت نیاز به apiToken کسب و کار ایجاد شده میتوانید توسط سرویس getApiTokenForCreatedBusiness فقط برای یک کسب و کار به شرط اینکه قبلا خودتان آن را ایجاد کرده باشید، توکن کسب و کاری دریافت نمایید.
-
+هنگامی که با استفاده از توکن خود کسب و کارهایی را ثبت نمایید، به ازای هر کسب و کار یک apiToken برگردانده می شود که از آن جهت مدیریت امور کسب و کار زیر مجموعه میتوانید استفاده نمایید. در سایر مواقع که لیست کسب و کارهای ثبت شده را دریافت می نمایید این مقدار در لیست برگردانده نمی شود. در صورت نیاز به apiToken کسب و کار ایجاد شده میتوانید توسط سرویس زیر فقط برای یک کسب و کار به شرط اینکه قبلا خودتان آن را ایجاد کرده باشید، توکن کسب و کاری دریافت نمایید.
 <br/>
 
 **هشدار:** دقت نمایید این توکن ها به مدت نامحدود فعال هستند و تا زمانی که revoke نشوند قابل استفاده می باشند. بنابرین مسائل امنیتی را در استفاده از آن در نظر بگیرید.
