set flowchart on chat

--- a/master/پیام رسان.md
+++ b/master/پیام رسان.md
@@ -1,3 +1,4 @@
+- [مقدمه](#menu)
 - [نصب در جاوا اسکریپت](#menu)
 - [نصب در IOS](#menu)
 - [نصب در Android](#menu)
@@ -15,6 +16,41 @@
 - [لینک‌های مرتبط](#menu)
 
 
+## مقدمه
+
+سرویس پیام رسان ، امکان استفاده از بستر پیام رسانی پلتفرم پاد را برای مشتریان مهیا می سازد. این سرویس به صورت یک پکیج مستقل (SDK) ، قابل نصب بروی نرم افزار تحت وب شماست.
+
+برای استفاده از بستر پیامرسانی پلتفرم پاد، نیاز به استفاده از پروتکل وب سوکت و اتصال به سرور Dirana (سرور Async که وظیفه ی مدیریت کردن درخواست ها را به صورت Asynchronous دارد) است. این پکیج به عنوان واسط اپلیکیشن مشتری و پلتفرم پاد ، این روند را تسهیل کرده و تمامی این ارتباطات را به صورت خودکار مدیریت میکند و در نهایت سرویسی جهت توسعه و کنترل یک نرم افزار بر بستر پلتفرم پیام رسان در اختیار مشتری قرار میدهد.
+
+**تمامی ارتباطات با سرور Dirana و مدیریت آنها توسط ماژول Async به صورت جداگانه کنترل و انجام می پذیرد که به طور کلی مدیریت نحوه ی ارتباطات را در دست دارد. این ماژول به صورت افزونه بر روی سرویس پیامرسان پاد نصب و راه اندازی شده است و نیازی به نصب، راه اندازی و استفاده ی مجزا نیست.**
+
+### فلوچارت ارسال یک پیام
+
+<div class="mermaid">
+graph TD  
+A((شروع))  
+A-.->B  
+B(نصب پکیج و ساخت نمونه اولیه)-.->C  
+C{آیا میخواهید یک ترد جدید بسازید}
+C-- خیر ---D  
+D(دریافت لیست تردهای قبلی)-.->E  
+E{آیا تردی وجود دارد}
+E-- بله ---F
+E-- خیر ---G
+F(ارسال پیام به یک فرد)-.->Z  
+C-- بله ---G  
+G(دریافت لیست مخاطبین)-.->H
+H{آیا مخاطبی وجود دارد}  
+H-- خیر ---I
+I(اضافه کردن مخاطب)-.->J
+H-- بله ---J
+J(ساخت ترد با یک یا چند مخاطب)-.->F
+Z((پایان))
+
+</div>
+
+<div class="box-end">
+</div>
 
 ## نصب در جاوا اسکریپت
 
