--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -1,8 +1,8 @@
 - [مقدمه](#menu)
 - [لیست اپراتورها](#menu)
-- [لیست خدمات یک اپراتور](#menu)
+- [لیست خدمات اپراتور مورد نظر](#menu)
 - [پلن های در دسترس شارژ مستقیم](#menu)
-- [پکیج های مختلف شارژ](#menu)
+- [پکیج های شارژ مستقیم](#menu)
 - [اعتبارسنجی درخواست شارژ](#menu)
 - [ایجاد رسید خرید شارژ](#menu)
 - [لیست پکیج های اینترنت](#menu)
@@ -19,6 +19,31 @@
 
 ### هشدار
 **برای تمام درخواست ها earer authentication token الزامی است.**
+
+<br/>
+
+
+<div class="mermaid">
+graph TD  
+A((شروع))  
+A-.->B  
+B(دریافت لیست اپراتورها)  
+B-- انتخاب اپراتور مورد نظر ---C
+C{دریافت لیست خدمات اپراتور مورد نظر}-.->D
+D{تعیین نوع خدمات}  
+D-- شارژ مستقیم ---M
+M(پلن های در دسترس شارژ مستقیم)-.->N
+N(لیست پکیج های شارژ مستقیم)-.->O
+O(اعتبارسنجی درخواست شارژ مستقیم)-.->P
+P(ایجاد رسید خرید شارژ مستقیم)-.->Q
+Q(پرداخت شارژپلاس)-.->Z
+D-- بسته اینترنتی ---F
+F(لیست پکیج های اینترنت)-.->G 
+G(اعتبارسنجی درخواست بسته اینترنتی)-.->H
+H(ایجاد رسید خرید بسته اینترنتی)-.->Q
+Z((پایان))
+
+</div>
 
 <div class="box-end">
 </div>
@@ -58,7 +83,7 @@
 </div>
 
 
-## لیست خدمات یک اپراتور
+## لیست خدمات اپراتور مورد نظر
 
 <br/>
 
@@ -127,7 +152,7 @@ $ch = curl_init();
 
 
 
-## پکیج های مختلف شارژ
+## پکیج های شارژ مستقیم
 
 
 <br/>
