update charge flowchart

--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -28,19 +28,24 @@ graph TD
 A((شروع))  
 A-.->B  
 B(دریافت لیست اپراتورها)  
-B-- انتخاب اپراتور مورد نظر ---C
-C{دریافت لیست خدمات اپراتور مورد نظر}-.->D
+B--> |انتخاب اپراتور مورد نظر| C
+C{دریافت لیست خدمات اپراتور مورد نظر}---D
 D{تعیین نوع خدمات}  
-D-- شارژ مستقیم ---M
-M(پلن های در دسترس شارژ مستقیم)-.->N
-N(لیست پکیج های شارژ مستقیم)-.->O
-O(اعتبارسنجی درخواست شارژ مستقیم)-.->P
-P(ایجاد رسید خرید شارژ مستقیم)-.->Q
-Q(پرداخت شارژپلاس)-.->Z
-D-- بسته اینترنتی ---F
-F(لیست پکیج های اینترنت)-.->G 
-G(اعتبارسنجی درخواست بسته اینترنتی)-.->H
-H(ایجاد رسید خرید بسته اینترنتی)-.->Q
+D--> |شارژ مستقیم| M
+M(پلن های در دسترس شارژ مستقیم)---N
+N(لیست پکیج های شارژ مستقیم)---O
+O{اعتبارسنجی}
+O-.-> |Not ok| N
+O-.-> |Not ok| M
+O-.-> |ok| P
+P(ایجاد رسید خرید شارژ مستقیم)---Q
+Q(پرداخت شارژپلاس)---Z
+D--> |بسته اینترنتی| F
+F(لیست پکیج های اینترنت)---G 
+G{اعتبارسنجی}
+G-.-> |Not ok| F
+G-.-> |ok| H
+H(ایجاد رسید خرید بسته اینترنتی)---Q
 Z((پایان))
 
 </div>
