update charge flowchart

--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -29,9 +29,9 @@ A((شروع))
 A-.->B  
 B(دریافت لیست اپراتورها)  
 B--> |انتخاب اپراتور مورد نظر| C
-C{دریافت لیست خدمات اپراتور مورد نظر}---D
+C(دریافت لیست خدمات اپراتور مورد نظر)---D
 D{تعیین نوع خدمات}  
-D--> |شارژ مستقیم| M
+D-.-> |شارژ مستقیم| M
 M(پلن های در دسترس شارژ مستقیم)---N
 N(لیست پکیج های شارژ مستقیم)---O
 O{اعتبارسنجی}
@@ -40,7 +40,7 @@ O-.-> |Not ok| M
 O-.-> |ok| P
 P(ایجاد رسید خرید شارژ مستقیم)---Q
 Q(پرداخت شارژپلاس)---Z
-D--> |بسته اینترنتی| F
+D-.-> |بسته اینترنتی| F
 F(لیست پکیج های اینترنت)---G 
 G{اعتبارسنجی}
 G-.-> |Not ok| F
