change charge document

--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -18,7 +18,7 @@
 افزایش تعداد تلفن های همراه و بالطبع افزایش تعداد سیم کارتهای اعتباری اپراتورها، باعث شده که یکی از کسب و کارهای نسبتا فراگیر در این حوزه، فروشگاههای مجازی فروش شارژ باشند. مشکلی که در این عرصه وجود دارد این است که عمدتا برای کسب وکارهای گوناگون که علاقه مند به فروش شارژ خطوط اعتباری هستند، امکان تعامل با اپراتورها وجود ندارد یا هزینه تامین این شارژ بسیار بالاست. شما با استفاده از شارژ پلاس می توانید به راحتی برای کسب و کار خود شارژ تامین نمایید و کارمزد برای فروش شارژ دریافت کنید. برای ورود به شارژ پلاس، لازم است تا در سامانه پاد ثبت نام کرده باشید تا با کاربری پاد خود به سامانه شارژ پلاس وارد شوید.
 
 ### هشدار
-**برای تمام درخواست ها earer authentication token الزامی است.**
+**برای تمام درخواست ها Bearer Authentication Token الزامی است.**
 
 <br/>
 
@@ -55,11 +55,7 @@ Z((پایان))
 
 ## لیست اپراتورها
 
-ین سرویس برای دریافت لیست اپراتور ها کاربر دارد. 
-
-<br/>
-
-**شناسه این سرویس  35922 درپاد**
+با استفاده از سرویس Services Providers شما می توانید لیست اپراتور ها را دریافت نمایید.
 
 <div class="tab-start">
 </div>
@@ -67,18 +63,28 @@ Z((پایان))
 # [PHP](#tab/php)
 
 ``` php
- $ch = curl_init();
+//Services Providers
+$base_url ='http://core.pod.ir/nzh/doServiceCall';
+$token = 'Authorization token';
 
-        // set url
-        curl_setopt($ch, CURLOPT_URL, $base_url."/api/services/providers");
+$ch = curl_init();
 
-        // $output contains the output string
-        $output = curl_exec($ch);
+curl_setopt($ch, CURLOPT_URL, $base_url);
+curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form-urlencoded','Authorization : Bearer '.$token.'','_token_ : ','_token_issuer_ :  '));
+curl_setopt($ch, CURLOPT_POST, 1);
+//require parameters
+$params = [
+    'scProductId' => '35922',
+];
+curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
 
-        // close curl resource to free up system resources
-        $result = curl_close($ch);
+// $output contains the output string
+$output = curl_exec($ch);
 
-        print_r($result);
+// close curl resource to free up system resources
+$result = curl_close($ch);
+
+print_r($result);
 ```
 
 <div class="tab-end">
@@ -90,9 +96,7 @@ Z((پایان))
 
 ## لیست خدمات اپراتور مورد نظر
 
-<br/>
-
-**شناسه این سرویس  35923 درپاد**
+با استفاده از این سرویس شما می توانید لیست خدمات شامل شارژمستقیم و بسته اینترنتی را به ازای اپراتور مورد نظر خود دریافت نمایید
 
 <div class="tab-start">
 </div>
@@ -100,18 +104,26 @@ Z((پایان))
 # [PHP](#tab/php)
 
 ``` php
- $ch = curl_init();
+$ch = curl_init();
 
-        // set url
-        curl_setopt($ch, CURLOPT_URL, $base_url."/api/services/{provider_name}/list"); //Provider names like mtn,mci
+// set url
+curl_setopt($ch, CURLOPT_URL, $base_url);
+curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form-urlencoded','Authorization : Bearer '.$token.'','_token_ : ','_token_issuer_ :  '));
+curl_setopt($ch, CURLOPT_POST, 1);
+//require parameters
+$params = [
+    'scProductId' => '35923',
+    'provider' => 'mtn',
+];
+curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
 
-        // $output contains the output string
-        $output = curl_exec($ch);
+// $output contains the output string
+$output = curl_exec($ch);
 
-        // close curl resource to free up system resources
-        $result = curl_close($ch);
+// close curl resource to free up system resources
+$result = curl_close($ch);
 
-        print_r($result);
+print_r($result);
 ```
 
 <div class="tab-end">
@@ -124,10 +136,7 @@ Z((پایان))
 
 ## پلن های در دسترس شارژ مستقیم
 
-
-<br/>
-
-**شناسه این سرویس  35924 درپاد**
+با استفاده از این سرویس شما می توانید لیست خدمات شامل شارژمستقیم و بسته اینترنتی را به ازای اپراتور مورد نظر خود دریافت نمایید
 
 <div class="tab-start">
 </div>
@@ -135,18 +144,28 @@ Z((پایان))
 # [PHP](#tab/php)
 
 ``` php
+//Direct charge plans based on provider
 $ch = curl_init();
 
-    // set url
-    curl_setopt($ch, CURLOPT_URL, $base_url."/api/services/internet_package/{provider_name}/{package_time}/{sim_type}/packages?page={count}");
+// set url
+curl_setopt($ch, CURLOPT_URL, $base_url);
+curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form-urlencoded','Authorization : Bearer '.$token.'','_token_ : ','_token_issuer_ :  '));
+curl_setopt($ch, CURLOPT_POST, 1);
+//require parameters
+$params = [
+    'scProductId' => '35924',
+    'provider' => 'mtn',
+];
+curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
 
-    // $output contains the output string
-    $output = curl_exec($ch);
+// $output contains the output string
+$output = curl_exec($ch);
 
-    // close curl resource to free up system resources
-    $result = curl_close($ch);
+// close curl resource to free up system resources
+$result = curl_close($ch);
 
-    print_r($result);
+print_r($result);
+
 ```
 
 <div class="tab-end">
@@ -159,10 +178,7 @@ $ch = curl_init();
 
 ## پکیج های شارژ مستقیم
 
-
-<br/>
-
-**شناسه این سرویس  35925 درپاد**
+با این سرویس می توانید حداقل و حدااکثر مبلغ خرید شارژمستقیم را به تفکیک اپراتور و طرح خرید شارژ دریافت نمایید. همچنین آیتم step نمایانگر روند افزایشی مبالغ است. برای مثال، حداقل مبلغ 10000 و حدااکثر مبلغ 2000000 ریال برای طرح عادی همراه اول، که مبالغ به صورت 1000 ریالی افزایش داده می شود (یعنی 11000 ریال، 12000 ریال و ...)
 
 <div class="tab-start">
 </div>
@@ -170,33 +186,28 @@ $ch = curl_init();
 # [PHP](#tab/php)
 
 ``` php
-    $ch = curl_init();
+//Direct charge packages based on provider and plans
+$ch = curl_init();
 
-        // set url
-        curl_setopt($ch, CURLOPT_URL, $base_url."/api/services/internet_package/validate-request");
+// set url
+curl_setopt($ch, CURLOPT_URL, $base_url);
+curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form-urlencoded','Authorization : Bearer '.$token.'','_token_ : ','_token_issuer_ :  '));
+curl_setopt($ch, CURLOPT_POST, 1);
+//require parameters
+$params = [
+    'scProductId' => '35925',
+    'provider' => 'mtn',
+    'plan' => 'normal'
+];
+curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
 
-        curl_setopt($ch, CURLOPT_POST, 1);
+// $output contains the output string
+$output = curl_exec($ch);
 
-        //require parameters
-        $params = [
-            'provider'=>'mtn',
-            'packageTime'=>'daily',
-            'sim_type'=>'postpaid',
-            'amount'=>'10000',
-            'paymentType'=>'post_paid'
-        ];
+// close curl resource to free up system resources
+$result = curl_close($ch);
 
-        $params = http_build_query($params);
-
-        curl_setopt($ch, CURLOPT_POSTFIELDS,$params);
-
-        // $output contains the output string
-        $output = curl_exec($ch);
-
-        // close curl resource to free up system resources
-        $result = curl_close($ch);
-
-        print_r($result);
+print_r($result);
 ```
 
 <div class="tab-end">
@@ -209,10 +220,7 @@ $ch = curl_init();
 
 ## اعتبارسنجی درخواست شارژ
 
-
-<br/>
-
-**شناسه این سرویس  35926 درپاد**
+اعتبارسنجی درخواست خرید شارژمستقیم به کمک این سرویس انجام می شود. یعنی قبل از صدور  رسید، مجدد مقادیر (از جمله provider، plan، phoneNumber و.. )  Recheck می شوند و در صورت صحت اعتبارسنجی صورت گرفته، پاسخ تایید مبنی بر فراخوانی API ایجاد فاکتور داده می شود
 
 <div class="tab-start">
 </div>
@@ -220,35 +228,34 @@ $ch = curl_init();
 # [PHP](#tab/php)
 
 ``` php
-        $ch = curl_init();
+//Direct charge validating invoice request
+$ch = curl_init();
 
-        // set url
-        curl_setopt($ch, CURLOPT_URL, $base_url."/api/services/internet_package/validate-request");
+// set url
+curl_setopt($ch, CURLOPT_URL, $base_url);
+curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form-urlencoded','Authorization : Bearer '.$token.'','_token_ : ','_token_issuer_ :  '));
+curl_setopt($ch, CURLOPT_POST, 1);
+//require parameters
+$params = [
+    'scProductId' => '35926',
+    'provider' => 'mtn',
+    'plan' => 'normal',
+    'phoneNumber' => '0936*****',
+    'isGift' => 0,
+    'email' => '',
+    'giftPhoneNumber' => '0936*****',
+    'amount' => 10000,
+    'paymentType' => 'post_paid',
+];
+curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
 
-        curl_setopt($ch, CURLOPT_POST, 1);
+// $output contains the output string
+$output = curl_exec($ch);
 
-        //require parameters
-        $params = [
-            'provider'=>'mtn',
-            'packageTime'=>'daily',
-            'phoneNumber'=>'09355555555',
-            'sim_type'=>'postpaid',
-            'productCode'=>'709',
-            'paymentType'=>'post_paid'
-        ];
+// close curl resource to free up system resources
+$result = curl_close($ch);
 
-        $params = http_build_query($params);
-
-        curl_setopt($ch, CURLOPT_POSTFIELDS,$params);
-
-        // $output contains the output string
-        $output = curl_exec($ch);
-
-        // close curl resource to free up system resources
-        $result = curl_close($ch);
-
-        print_r($result);
-
+print_r($result);
 ```
 
 <div class="tab-end">
@@ -262,10 +269,7 @@ $ch = curl_init();
 
 ## ایجاد رسید خرید شارژ
 
-
-<br/>
-
-**شناسه این سرویس  35927 درپاد**
+درصورتی که اعتبارسنجی درخواست خرید شما موفق بوده باشد، در اینجا رسید یا فاکتور خرید شارژمستقیم را می توانید دریافت کنید.
 
 <div class="tab-start">
 </div>
@@ -273,18 +277,34 @@ $ch = curl_init();
 # [PHP](#tab/php)
 
 ``` php
-        $ch = curl_init();
+//Direct charge generating invoice request
+$ch = curl_init();
 
-        // set url
-        curl_setopt($ch, CURLOPT_URL, $base_url."/api/services/direct_charge/{provider_name}/plans"); //Provider names like mtn,mci
+// set url
+curl_setopt($ch, CURLOPT_URL, $base_url);
+curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form-urlencoded','Authorization : Bearer '.$token.'','_token_ : ','_token_issuer_ :  '));
+curl_setopt($ch, CURLOPT_POST, 1);
+//require parameters
+$params = [
+    'scProductId' => '35927',
+    'provider' => 'mtn',
+    'plan' => 'normal',
+    'phoneNumber' => '0936*****',
+    'isGift' => 0,
+    'email' => '',
+    'giftPhoneNumber' => '0936*****',
+    'amount' => 10000,
+    'paymentType' => 'post_paid',
+];
+curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
 
-        // $output contains the output string
-        $output = curl_exec($ch);
+// $output contains the output string
+$output = curl_exec($ch);
 
-        // close curl resource to free up system resources
-        $result = curl_close($ch);
+// close curl resource to free up system resources
+$result = curl_close($ch);
 
-        print_r($result);
+print_r($result);
 ```
 
 <div class="tab-end">
@@ -298,10 +318,7 @@ $ch = curl_init();
 
 ## لیست پکیج های اینترنت
 
-
-<br/>
-
-**شناسه این سرویس  35928 درپاد**
+درصورتی که اعتبارسنجی درخواست خرید شما موفق بوده باشد، در اینجا رسید یا فاکتور خرید شارژمستقیم را می توانید دریافت کنید.
 
 <div class="tab-start">
 </div>
@@ -309,18 +326,30 @@ $ch = curl_init();
 # [PHP](#tab/php)
 
 ``` php
-       $ch = curl_init();
+//Internet package based on provider,packagetime and simtype
+$ch = curl_init();
 
-        // set url
-        curl_setopt($ch, CURLOPT_URL, $base_url."/api/services/direct_charge/{provider_name}/{plan}/package"); //Provider names like mtn,mci  , Plans that taken from previous api like normal
+// set url
+curl_setopt($ch, CURLOPT_URL, $base_url);
+curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form-urlencoded','Authorization : Bearer '.$token.'','_token_ : ','_token_issuer_ :  '));
+curl_setopt($ch, CURLOPT_POST, 1);
+//require parameters
+$params = [
+    'scProductId' => '35928',
+    'provider' => 'mtn',
+    'package_time' => 'daily',
+    'sim_type' => 'postpaid',
+    'page_number' => 1,
+];
+curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
 
-        // $output contains the output string
-        $output = curl_exec($ch);
+// $output contains the output string
+$output = curl_exec($ch);
 
-        // close curl resource to free up system resources
-        $result = curl_close($ch);
+// close curl resource to free up system resources
+$result = curl_close($ch);
 
-        print_r($result);
+print_r($result);
 ```
 
 <div class="tab-end">
@@ -333,10 +362,7 @@ $ch = curl_init();
 
 ## اعتبارسنجی درخواست بسته اینترنتی
 
-
-<br/>
-
-**شناسه این سرویس  35929 درپاد**
+به منظور سنجش صحت درخواست برای ایجاد رسید خرید در مرحله بعد می باشد.
 
 <div class="tab-start">
 </div>
@@ -344,33 +370,34 @@ $ch = curl_init();
 # [PHP](#tab/php)
 
 ``` php
-        $ch = curl_init();
+$ch = curl_init();
 
-        // set url
-        curl_setopt($ch, CURLOPT_URL, $base_url."/api/services/direct_charge/validate-request");
+// set url
+curl_setopt($ch, CURLOPT_URL, $base_url);
+curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form-urlencoded','Authorization : Bearer '.$token.'','_token_ : ','_token_issuer_ :  '));
+curl_setopt($ch, CURLOPT_POST, 1);
+//require parameters
+$params = [
+    'scProductId' => '35929',
+    'provider' => 'mtn',
+    'packageTime' => 'daily',
+    'simType' => 'prepaid',
+    'phoneNumber' => '0936******',
+    'isGift' => 0,
+    'email' => '',
+    'giftPhoneNumber' => '0936*****',
+    'productCode' => '',
+    'paymentType' => 'post_paid',
+];
+curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
 
-        curl_setopt($ch, CURLOPT_POST, 1);
+// $output contains the output string
+$output = curl_exec($ch);
 
-        //require parameters
-        $params = [
-            'provider'=>'mtn',
-            'plan'=>'normal',
-            'phoneNumber'=>'09355555555',
-            'amount'=>'10000',
-            'paymentType'=>'post_paid'
-        ];
+// close curl resource to free up system resources
+$result = curl_close($ch);
 
-        $params = http_build_query($params);
-
-        curl_setopt($ch, CURLOPT_POSTFIELDS,$params);
-
-        // $output contains the output string
-        $output = curl_exec($ch);
-
-        // close curl resource to free up system resources
-        $result = curl_close($ch);
-
-        print_r($result);
+print_r($result);
 ```
 
 <div class="tab-end">
@@ -383,10 +410,7 @@ $ch = curl_init();
 
 ## ایجاد رسید بسته اینترنتی
 
-
-<br/>
-
-**شناسه این سرویس  35930 درپاد**
+به منظور ایجاد رسید خرید می باشد.
 
 <div class="tab-start">
 </div>
@@ -394,33 +418,35 @@ $ch = curl_init();
 # [PHP](#tab/php)
 
 ``` php
-         $ch = curl_init();
+$ch = curl_init();
 
-        // set url
-        curl_setopt($ch, CURLOPT_URL, $base_url."/api/services/direct_charge/generate-invoice");
+// set url
+curl_setopt($ch, CURLOPT_URL, $base_url);
+curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form-urlencoded','Authorization : Bearer '.$token.'','_token_ : ','_token_issuer_ :  '));
+curl_setopt($ch, CURLOPT_POST, 1);
+//require parameters
+$params = [
+    'scProductId' => '35930',
+    'provider' => 'mtn',
+    'packageTime' => 'daily',
+    'simType' => 'prepaid',
+    'phoneNumber' => '0936******',
+    'isGift' => 0,
+    'email' => '',
+    'giftPhoneNumber' => '0936*****',
+    'productCode' => '',
+    'paymentType' => 'post_paid',
+];
+curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
 
-        curl_setopt($ch, CURLOPT_POST, 1);
+// $output contains the output string
+$output = curl_exec($ch);
 
-        //require parameters
-        $params = [
-            'provider'=>'mtn',
-            'plan'=>'normal',
-            'phoneNumber'=>'09355555555',
-            'amount'=>'10000',
-            'paymentType'=>'post_paid'
-        ];
+// close curl resource to free up system resources
+$result = curl_close($ch);
 
-        $params = http_build_query($params);
+print_r($result);
 
-        curl_setopt($ch, CURLOPT_POSTFIELDS,$params);
-
-        // $output contains the output string
-        $output = curl_exec($ch);
-
-        // close curl resource to free up system resources
-        $result = curl_close($ch);
-
-        print_r($result);
 ```
 
 <div class="tab-end">
@@ -433,10 +459,7 @@ $ch = curl_init();
 
 ## پرداخت شارژپلاس
 
-
-<br/>
-
-**شناسه این سرویس  35931 درپاد**
+پس از ایجاد فاکتور و برای دریافت شارژ و یا بسته اینترنتی api زیر صدا زده می شود:
 
 <div class="tab-start">
 </div>
@@ -444,25 +467,26 @@ $ch = curl_init();
 # [PHP](#tab/php)
 
 ``` php
-    $ch = curl_init();
+$ch = curl_init();
 
-    // set url
-    curl_setopt($ch, CURLOPT_URL, $base_url."/api/services/payment/{invoice_id}");
+// set url
+curl_setopt($ch, CURLOPT_URL, $base_url);
+curl_setopt($ch, CURLOPT_HTTPHEADER, array('Content-Type: application/x-www-form-urlencoded','Authorization : Bearer '.$token.'','_token_ : ','_token_issuer_ :  '));
+curl_setopt($ch, CURLOPT_POST, 1);
+//require parameters
+$params = [
+    'scProductId' => '3593z',
+    'invoice_id' => '',
+];
+curl_setopt($ch, CURLOPT_POSTFIELDS, $params);
 
-    curl_setopt($ch, CURLOPT_POST, 1);
+// $output contains the output string
+$output = curl_exec($ch);
 
-    //require parameters
+// close curl resource to free up system resources
+$result = curl_close($ch);
 
-    $params = http_build_query($params);
-
-    // $output contains the output string
-    $output = curl_exec($ch);
-
-    // close curl resource to free up system resources
-    $result = curl_close($ch);
-
-    print_r($result);
-
+print_r($result);
 ```
 
 <div class="tab-end">
