correct menu in vouchers

--- a/master/خرید(فاکتور).md
+++ b/master/خرید(فاکتور).md
@@ -2004,7 +2004,7 @@ podBilling.getExportList(getExportListData)
 
 ## خرید امن
 
-امکان پرداخت امن برای نوع خاصی از کسب و کارها که امکان لغو یا تایید خرید را تا آخرین لحظه بر عهده مشتری می‌گذارند (مانند فروشندگان واسطه) بسیار مناسب است. در این حالت مشتری می تواند بعد از پرداخت فاکتور تا زمان اعلام شده توسط کسب و کار، آن را لغو و پول خورد را پس بگیرد یا آن را تایید نماید تا فروشنده پول خود را دریافت کند.
+امکان پرداخت امن برای نوع خاصی از کسب و کارها که امکان لغو یا تایید خرید را تا آخرین لحظه بر عهده مشتری می‌گذارند (مانند فروشندگان واسطه) بسیار مناسب است. در این حالت مشتری می تواند بعد از پرداخت فاکتور تا زمان اعلام شده توسط کسب و کار، آن را لغو و پول خود را پس بگیرد یا آن را تایید نماید تا فروشنده پول خود را دریافت کند.
 
 <br/>
 
