--- a/master/بن تخفیف.md
+++ b/master/بن تخفیف.md
@@ -3,8 +3,8 @@
 - [بن تخفیف مبلغی](#menu)
 - [بن تخفیف درصدی](#menu)
 - [اعمال بن تخفیف به فاکتور](#menu)
-- [لیست و جستجو بن‌ ها](#menu)
-- [فعال و غیرفعال‌سازی بن تخفیف](#menu)
+- [لیست و جستجو بن‌ تخفیف ها](#menu)
+- [فعال و غیرفعال‌ سازی بن تخفیف](#menu)
 - [لینک‌های مرتبط](#menu)
 
 
@@ -855,7 +855,7 @@ let applyVoucherData = {
 </div>
 
 
-## لیست و جستجو بن‌تخفیف‌ها
+## لیست و جستجو بن‌ تخفیف ها
 
 با سرویس زیر امکان خواهید داشت در بین بن تخفیف‌های تعریف شده جستجو و آن را دریافت نمایید:
 
@@ -1058,7 +1058,7 @@ $param =
 </div>
 
 
-## فعال و غیرفعال سازی بن تخفیف
+## فعال و غیرفعال‌ سازی بن تخفیف
 
 سرویس زیر را جهت غیرفعال کردن بن تخفیف زودتر از موعد فراخوانی نمایید:
 
