charge is fixed again

--- a/master/شارژ.md
+++ b/master/شارژ.md
@@ -136,7 +136,7 @@ print_r($result);
 
 ## پلن های در دسترس شارژ مستقیم
 
-با استفاده از این سرویس شما می توانید لیست خدمات شامل شارژمستقیم و بسته اینترنتی را به ازای اپراتور مورد نظر خود دریافت نمایید
+با استفاده از این سرویس شما می توانید لیست پلن‌ها یا طرح‌های مربوط به یک خدمت اپراتور را دریافت نمایید. به طور مثال طرح جوانان یا طرح بانوان خرید شارژمستقیم ایرانسل
 
 <div class="tab-start">
 </div>
@@ -178,7 +178,7 @@ print_r($result);
 
 ## پکیج های شارژ مستقیم
 
-با این سرویس می توانید حداقل و حدااکثر مبلغ خرید شارژمستقیم را به تفکیک اپراتور و طرح خرید شارژ دریافت نمایید. همچنین آیتم step نمایانگر روند افزایشی مبالغ است. برای مثال، حداقل مبلغ 10000 و حدااکثر مبلغ 2000000 ریال برای طرح عادی همراه اول، که مبالغ به صورت 1000 ریالی افزایش داده می شود (یعنی 11000 ریال، 12000 ریال و ...)
+با این سرویس می توانید حداقل و حداکثر مبلغ خرید شارژمستقیم را به تفکیک اپراتور و طرح خرید شارژ دریافت نمایید. همچنین آیتم step نمایانگر روند افزایشی مبالغ است. برای مثال، حداقل مبلغ 10000 و حداکثر مبلغ 2000000 ریال برای طرح عادی همراه اول، که مبالغ به صورت 1000 ریالی افزایش داده می شود (یعنی 11000 ریال، 12000 ریال و ...)
 
 <div class="tab-start">
 </div>
@@ -318,7 +318,7 @@ print_r($result);
 
 ## لیست پکیج های اینترنت
 
-درصورتی که اعتبارسنجی درخواست خرید شما موفق بوده باشد، در اینجا رسید یا فاکتور خرید شارژمستقیم را می توانید دریافت کنید.
+از طریق این سرویس می توانید لیست بسته‌های اینترنتی را بر اساس اپراتور (provider) و  بازه زمانی مصرف بسته (package_time) و نوع سیم‌کارت (sim_type) شامل اعتباری یا دائمی ، دریافت کنید.
 
 <div class="tab-start">
 </div>
